examples/passing/ModuleExportDupes/C.purs
module C (module Prelude, module A) where

import Prelude
import A
