examples/failing/ImportHidingModule/B.purs
module B (module B, module A) where
import A
y = 1
